[package]
name = "ifstools-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
png = "0.18.1"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
texpresso = "2.0.2"

[profile.release]
lto = "fat"
codegen-units = 1
