[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ifstools"
version = "2.0"
description = "Extractor/repacker for Konmai IFS files"
readme = "README.md"
authors = [
    {name = "mon", email = "me@mon.im"},
]
dependencies = [
    "kbinxml>=1.5",
    "lxml",
    "pillow",
    "tqdm",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/mon/ifstools/"

[project.scripts]
ifstools = "ifstools:main"

[tool.maturin]
python-source = "src"
module-name = "ifstools.handlers._native"
features = ["pyo3/extension-module"]
